adding token auth

--- a/src/partials/config.html
+++ b/src/partials/config.html
@@ -8,6 +8,8 @@
     <div class="gf-form max-width-30">
       <span class="gf-form-label width-7">Tenant</span>
       <input type="text" class="gf-form-input" ng-model="ctrl.current.jsonData.tenant" placeholder="default" required>
+      <span class="gf-form-label width-7">Token</span>
+      <input type="text" class="gf-form-input" ng-model="ctrl.current.jsonData.token" placeholder="default">
     </div>
   </div>
 </div>
