Reworked the PR
Put the config token field at the bottom of the form, not next to tenant
field.
Do not use bearer authentication is token is not set.
Updated doc.
Built the repo (dist repository must contain a working distribution).

--- a/src/partials/config.html
+++ b/src/partials/config.html
@@ -8,8 +8,12 @@
     <div class="gf-form max-width-30">
       <span class="gf-form-label width-7">Tenant</span>
       <input type="text" class="gf-form-input" ng-model="ctrl.current.jsonData.tenant" placeholder="default" required>
+    </div>
+  </div>
+  <div class="gf-form-inline">
+    <div class="gf-form max-width-30">
       <span class="gf-form-label width-7">Token</span>
-      <input type="text" class="gf-form-input" ng-model="ctrl.current.jsonData.token" placeholder="default">
+      <input type="text" class="gf-form-input" ng-model="ctrl.current.jsonData.token">
     </div>
   </div>
 </div>
