Prepare for implementing tags query language builder
(Feature #49)
In controller, extract tags-related stuff into a separate class (keyValuePairTagsController)
that will be used for legacy (metrics <0.24).

New tags query builder will be implemented in class TagsQLController

--- a/src/partials/query.editor.html
+++ b/src/partials/query.editor.html
@@ -5,27 +5,27 @@
 				<option ng-repeat="type in ctrl.metricTypes" value="{{type.value}}">{{type.text}}</option>
 			</select>
 		</div>
-		<div class="gf-form" ng-show="ctrl.queryByTagCapability">
-			<label class="gf-form-label">Tags</label>
+		<div class="gf-form" ng-show="ctrl.caps.QUERY_BY_TAGS">
+			<label class="gf-form-label query-keyword fix-query-keyword">Tags</label>
 			<metric-segment ng-repeat="segment in ctrl.tagsSegments" segment="segment" get-options="ctrl.getTagsSegments(segment, $index)" on-change="ctrl.tagsSegmentChanged(segment, $index)"></metric-segment>
 		</div>
 	</div>
 	<div class="gf-form-inline">
 		<div class="gf-form">
-			<label class="gf-form-label">Metric name</label>
+			<label class="gf-form-label query-keyword fix-query-keyword">Metric name</label>
 			<metric-segment-model property="ctrl.target.id" get-options="ctrl.getMetricOptions()" on-change="ctrl.onChangeInternal()" css-class="max-width-30"></metric-segment-model>
 		</div>
-		<gf-form-switch ng-if="ctrl.target.type !== 'availability'" class="gf-form" label="Rate" checked="ctrl.target.rate" switch-class="max-width-6" on-change="ctrl.onChangeInternal()"></gf-form-switch>
+		<gf-form-switch ng-if="ctrl.target.type !== 'availability'" class="gf-form query-keyword fix-query-keyword" label="Rate" checked="ctrl.target.rate" switch-class="max-width-6" on-change="ctrl.onChangeInternal()"></gf-form-switch>
 	</div>
-	<div class="gf-form-inline" ng-show="ctrl.statsPostCapability" ng-if="ctrl.panel.type === 'singlestat' &amp;&amp; ctrl.target.type !== 'availability'">
+	<div class="gf-form-inline" ng-show="ctrl.caps.QUERY_STATS_POST_ENDPOINTS" ng-if="ctrl.panel.type === 'singlestat' &amp;&amp; ctrl.target.type !== 'availability'">
 		<div class="gf-form">
-			<label class="gf-form-label">Multiple series aggregation</label>
+			<label class="gf-form-label query-keyword fix-query-keyword">Multiple series aggregation</label>
 			<select class="gf-form-input" ng-model="ctrl.target.seriesAggFn" ng-change="ctrl.onChangeInternal()">
 				<option ng-repeat="fn in ctrl.seriesAggFns" value="{{fn.value}}">{{fn.text}}</option>
 			</select>
 		</div>
 		<div class="gf-form">
-			<label class="gf-form-label">Time aggregation</label>
+			<label class="gf-form-label query-keyword fix-query-keyword">Time aggregation</label>
 			<select class="gf-form-input" ng-model="ctrl.target.timeAggFn" ng-change="ctrl.onChangeInternal()">
 				<option ng-repeat="fn in ctrl.timeAggFns" value="{{fn.value}}">{{fn.text}}</option>
 			</select>
