--- a/src/partials/annotations.editor.html
+++ b/src/partials/annotations.editor.html
@@ -1,7 +1,22 @@
-
-<h5 class="section-heading">Query</h5>
 <div class="gf-form-group">
+  <div class="gf-form-inline">
+    <div class="gf-form">
+      <span class="gf-form-label">
+        Tenant&nbsp;
+        <i class="fa fa-question-circle" bs-tooltip="'Use for per-query tenant configuration only, see datasource configuration'" data-placement="right"></i>
+      </span>
+      <input type="text" class="gf-form-input max-width-10" ng-model="ctrl.annotation.tenant" placeholder="">
+    </div>
+    <div class="gf-form">
+      <span class="gf-form-label">Type</span>
+      <select class="gf-form-input max-width-10" ng-model="ctrl.annotation.type">
+        <option value="availability">Availability</option>
+        <option value="strings">String</option>
+      </select>
+    </div>
+  </div>
   <div class="gf-form">
+    <span class="gf-form-label">Metric name</span>
     <input type="text" class="gf-form-input" ng-model="ctrl.annotation.query" placeholder="">
   </div>
 </div>
