--- a/src/partials/config.html
+++ b/src/partials/config.html
@@ -4,7 +4,8 @@
 <h3 class="page-heading">Hawkular settings</h3>
 
 <div class="gf-form-group">
-  <div class="gf-form-inline">
+  <gf-form-switch class="gf-form" label="Tenant per query" checked="ctrl.current.jsonData.isTenantPerQuery" switch-class="max-width-6"></gf-form-switch>
+  <div class="gf-form-inline" ng-if="!ctrl.current.jsonData.isTenantPerQuery">
     <div class="gf-form max-width-30">
       <span class="gf-form-label width-7">Tenant</span>
       <input type="text" class="gf-form-input" ng-model="ctrl.current.jsonData.tenant" placeholder="default" required>
