--- a/src/partials/query.editor.html
+++ b/src/partials/query.editor.html
@@ -7,9 +7,9 @@
 				<option ng-repeat="type in ctrl.metricTypes" value="{{type.value}}">{{type.text}}</option>
 			</select>
 		</div>
-		<div class="gf-form" ng-show="ctrl.caps.QUERY_BY_TAGS">
+		<div class="gf-form max-width-30" ng-show="ctrl.caps.QUERY_BY_TAGS">
 			<label class="gf-form-label query-keyword fix-query-keyword">Tags</label>
-			<input ng-if="ctrl.target.rawTagsQuery" type="text" class="gf-form-input max-width-30" ng-model="ctrl.target.tagsQL" placeholder="Use tag query language" spellcheck="false" ng-blur="ctrl.onChangeInternal()"></input>
+			<input ng-if="ctrl.target.rawTagsQuery" type="text" class="gf-form-input" ng-model="ctrl.target.tagsQL" placeholder="Use tag query language" spellcheck="false" ng-blur="ctrl.onChangeInternal()"></input>
 			<metric-segment ng-if="!ctrl.target.rawTagsQuery" ng-repeat="segment in ctrl.tagsSegments" segment="segment" get-options="ctrl.getTagsSegments(segment, $index)" on-change="ctrl.tagsSegmentChanged(segment, $index)"></metric-segment>
 		</div>
 	</div>
