--- a/src/partials/annotations.editor.html
+++ b/src/partials/annotations.editor.html
@@ -1,10 +1,7 @@
 <div class="gf-form-group">
   <div class="gf-form-inline">
-    <div class="gf-form">
-      <span class="gf-form-label">
-        Tenant&nbsp;
-        <i class="fa fa-question-circle" bs-tooltip="'Use for per-query tenant configuration only, see datasource configuration'" data-placement="right"></i>
-      </span>
+    <div ng-if="ctrl.datasource.isTenantPerQuery" class="gf-form">
+			<label class="gf-form-label">Tenant</label>
       <input type="text" class="gf-form-input max-width-10" ng-model="ctrl.annotation.tenant" placeholder="">
     </div>
     <div class="gf-form">
@@ -12,11 +9,13 @@
       <select class="gf-form-input max-width-10" ng-model="ctrl.annotation.type">
         <option value="availability">Availability</option>
         <option value="strings">String</option>
+        <option value="alert">Alert</option>
       </select>
     </div>
   </div>
   <div class="gf-form">
-    <span class="gf-form-label">Metric name</span>
+    <span ng-if="ctrl.annotation.type != 'alert'" class="gf-form-label">Metric name</span>
+    <span ng-if="ctrl.annotation.type == 'alert'" class="gf-form-label">Trigger ID</span>
     <input type="text" class="gf-form-input" ng-model="ctrl.annotation.query" placeholder="">
   </div>
 </div>
